--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1>App component</h1>
-<h2>Todo Item</h2>
+
+<h2>{{ title }}</h2>
+<!-- Degiskeni iki süslü parantez arasina yazarak app.components'ten getirdik -->
+
+<h2>{{ getTitle() }}</h2>
+
+<p>{{ todoItem.description }} {{ todoItem.action }}</p>
