--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>App component</h1>
+<h1 class="bg-warning">App component</h1>
 
 <h2>{{ title }}</h2>
 <!-- Degiskeni iki süslü parantez arasina yazarak app.components'ten getirdik -->
