--- a/todoapp/src/app/todo/todo.component.html
+++ b/todoapp/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-5 mx-auto">
-      <h3 class="bg-primary text-white p-3">Todo List</h3>
+      <h3 class="bg-primary text-white p-3">{{getName()}}'s To Do List</h3>
       <div class="input-group mb-3">
         <input type="text" class="form-control" />
         <button class="btn btn-outline-primary">Add</button>
@@ -41,6 +41,10 @@
           </tr>
         </tbody>
       </table>
+
+      <ul>
+        <li *ngFor="let item of list"></li>
+      </ul>
     </div>
   </div>
 </div>
