--- a/todoapp/src/app/todo/todo.component.html
+++ b/todoapp/src/app/todo/todo.component.html
@@ -6,19 +6,20 @@
         <input #txtItem type="text" class="form-control" />
         <button
           class="btn btn-outline-primary"
-          (click)="addItem(txtItem.value); txtItem.value=''"
+          (click)="addItem(txtItem.value); txtItem.value = ''"
         >
           Add
         </button>
       </div>
       <div class="form-check mb-3">
         <input
+          [(ngModel)]="displayAll"
           type="checkbox"
           class="form-check-input"
           name=""
           id="displayAll"
         />
-        <label for="displayAll" class="form-check-label">Hepsini Göster</label>
+        <label for="displayAll" class="form-check-label">Show All</label>
       </div>
       <table class="table table-bordered">
         <thead>
@@ -26,6 +27,7 @@
             <th></th>
             <th>Description</th>
             <th>Action</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
@@ -33,6 +35,7 @@
             <td>{{ i + 1 }}</td>
             <td>{{ item.description }}</td>
             <td>{{ item.action }}</td>
+            <td><input type="checkbox" [(ngModel)]="item.action" name="" id=""></td>
           </tr>
         </tbody>
       </table>
