--- a/todoapp/src/app/todo/todo.component.html
+++ b/todoapp/src/app/todo/todo.component.html
@@ -21,7 +21,7 @@
         />
         <label for="displayAll" class="form-check-label">Show All</label>
       </div>
-      <table class="table table-bordered">
+      <table class="table table-bordered" *ngIf="getItems().length > 0">
         <thead>
           <tr>
             <th></th>
@@ -34,11 +34,25 @@
           <tr *ngFor="let item of getItems(); let i = index">
             <td>{{ i + 1 }}</td>
             <td>{{ item.description }}</td>
-            <td>{{ item.action }}</td>
-            <td><input type="checkbox" [(ngModel)]="item.action" name="" id=""></td>
+            <td>
+              <!-- *ngIf ile
+              <div *ngIf="item.action">Yes</div>
+              <div *ngIf="!item.action">No</div>
+               -->
+              <div [ngSwitch]="item.action">
+                <div *ngSwitchCase="true">Yes</div>
+                <div *ngSwitchCase="false">No</div>
+              </div>
+            </td>
+            <td>
+              <input type="checkbox" [(ngModel)]="item.action" name="" id="" />
+            </td>
           </tr>
         </tbody>
       </table>
+      <div class="alert alert-warning" *ngIf="getItems().length === 0">
+        There are no To Do!
+      </div>
     </div>
   </div>
 </div>
