--- a/todoapp/src/app/todo/todo.component.html
+++ b/todoapp/src/app/todo/todo.component.html
@@ -21,38 +21,71 @@
         />
         <label for="displayAll" class="form-check-label">Show All</label>
       </div>
-      <table class="table table-bordered" *ngIf="getItems().length > 0">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Description</th>
-            <th>Action</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of getItems(); let i = index">
-            <td>{{ i + 1 }}</td>
-            <td>{{ item.description }}</td>
-            <td>
-              <!-- *ngIf ile
+
+      <div class="my-2">{{ displayCount() }} To Dos are completed...</div>
+
+      <div
+        class="alert alert-warning"
+        *ngIf="getItems().length === 0; else itemsTable"
+      >
+        All To Dos successfully completed!
+      </div>
+
+      <ng-template #itemsTable>
+        <table class="table table-bordered" *ngIf="getItems().length > 0">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Description</th>
+              <th>Action</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of getItems(); let i = index">
+              <td>{{ i + 1 }}</td>
+              <td>{{ item.description }}</td>
+              <td>
+                <!-- *ngIf ile
               <div *ngIf="item.action">Yes</div>
               <div *ngIf="!item.action">No</div>
                -->
-              <div [ngSwitch]="item.action">
-                <div *ngSwitchCase="true">Yes</div>
-                <div *ngSwitchCase="false">No</div>
-              </div>
-            </td>
-            <td>
-              <input type="checkbox" [(ngModel)]="item.action" name="" id="" />
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="alert alert-warning" *ngIf="getItems().length === 0">
-        There are no To Do!
-      </div>
+                <!--  <div [ngSwitch]="item.action">
+                  <div *ngSwitchCase="true">Yes</div>
+                  <div *ngSwitchCase="false">No</div>
+                </div> -->
+
+                <!--If else blogu-->
+                <!-- 
+                <div *ngIf="item.action; else noTemplate">Yes</div>
+
+                <ng-template #noTemplate>No</ng-template>
+
+                 -->
+                <!-- If then blogu
+                <div *ngIf="item.action; then noTemplate">This area doesn't be shown with if-then template</div>
+                <ng-template #noTemplate>No</ng-template> -->
+
+                <!-- If then-else blogu-->
+
+                <div *ngIf="item.action; then noTemplate;else yesTemplate">
+                  This area doesn't be shown with if-then template
+                </div>
+                <ng-template #noTemplate>No</ng-template>
+                <ng-template #yesTemplate>Yes</ng-template>
+              </td>
+              <td>
+                <input
+                  type="checkbox"
+                  [(ngModel)]="item.action"
+                  name=""
+                  id=""
+                />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </ng-template>
     </div>
   </div>
 </div>
