--- a/todoapp/src/app/todo/todo.component.html
+++ b/todoapp/src/app/todo/todo.component.html
@@ -61,6 +61,7 @@
                   [(ngModel)]="item.action"
                   name=""
                   id=""
+                  (change)="onActionChanged(item)"
                 />
               </td>
             </tr>
