--- a/movieapp/src/app/movies/movies.component.html
+++ b/movieapp/src/app/movies/movies.component.html
@@ -4,18 +4,17 @@
     {{ movies.length }} adet film bulundu.
   </div>
 
+  <div class="mb-3">
+    <input class="form-control" type="text" [(ngModel)]="filterText" />
+
+    <small *ngIf="filterText.length > 0">Aranan Kelime: {{ filterText }}</small>
+  </div>
+
   <ngTemplate [ngTemplateOutlet]="movieList1"> </ngTemplate>
- 
-  
 </div>
 
-
-
 <ng-template #movieList1>
-
-  <div></div>
-
-  <div class="card mb-3" *ngFor="let item of movies">
+  <div class="card mb-3" *ngFor="let item of movies | movieFilter:filterText">
     <div class="row">
       <div class="col-md-3">
         <img
@@ -26,12 +25,12 @@
       </div>
       <div class="col-md-9">
         <div class="card-body">
-          <h2 class="card-title">{{ item.title | uppercase  }}</h2>
+          <h2 class="card-title">{{ item.title | uppercase }}</h2>
           <p class="card-text">
-            {{ item.description | summary: 50}}
+            {{ item.description | summary: 50 }}
           </p>
           <p class="card-text">
-            {{ item.datePublished | date:'fullDate' }}
+            {{ item.datePublished | date: "fullDate" }}
           </p>
           <button class="btn btn-sm btn-outline-primary">Details</button>
         </div>
@@ -39,11 +38,6 @@
     </div>
   </div>
 </ng-template>
-
-
-
-
-
 
 <ng-template #no_movies>
   <div class="alert alert-warning">Film Bulunamadi</div>
