--- a/movieapp/src/app/category/category.component.html
+++ b/movieapp/src/app/category/category.component.html
@@ -1,8 +1,16 @@
 <div class="list-group">
   <a
+    class="list-group-item list-group-item-action"
+    [class.active]="displayAll"
+    (click) = "selectCategory()"
+    >Tüm Kategoriler</a
+  >
+  <a
     href="#"
     class="list-group-item list-group-item-action"
     *ngFor="let item of categories"
+    [class.active]="!displayAll && selectedCategory.id == item.id"
+    (click)="selectCategory(item)"
     >{{ item.name }}</a
   >
 </div>
